force-app/main/default/objects/DeliveryNote__c/DeliveryNote__c.object-meta.xml
<CustomObject>
    <label>Delivery Note</label>
    <pluralLabel>Delivery Notes</pluralLabel>
    <nameField>
        <displayFormat>DN-{0000}</displayFormat>
        <label>Delivery Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <searchStatus>Active</searchStatus>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>SecondaryOrder__c</fullName>
        <label>Secondary Order</label>
        <referenceTo>SecondaryOrder__c</referenceTo>
        <relationshipLabel>Delivery Notes</relationshipLabel>
        <relationshipName>DeliveryNotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DeliveredAt__c</fullName>
        <label>Delivered At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <label>Vehicle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driver__c</fullName>
        <label>Driver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>