force-app/main/default/objects/DeliveryNote__c/fields/DeliveredAt__c.field-meta.xml
<CustomField>
    <fullName>DeliveredAt__c</fullName>
    <label>DeliveredAt</label>
    <type>DateTime</type>
</CustomField>