force-app/main/default/objects/DeliveryNote__c/fields/SecondaryOrder__c.field-meta.xml
<CustomField>
    <fullName>SecondaryOrder__c</fullName>
    <label>SecondaryOrder</label>
    <referenceTo>SecondaryOrder__c</referenceTo>
    <relationshipLabel>Related Records</relationshipLabel>
    <relationshipName>Related_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>Lookup</type>
</CustomField>