force-app/main/default/objects/DeliveryNote__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <label>Vehicle</label>
    <length>80</length>
    <type>Text</type>
</CustomField>